# 2024-SYSU-YSOSv2

./: .gitignore  README.md
esp/: KERNEL.ELF  NvVars  hello.txt
esp/APP/: counter  fish  fork  hello  mq  mytest  philo  sem  sh  spin  test_fork  test_sem  test_spin
esp/EFI/BOOT/: BOOTX64.EFI  boot.conf
pkg/app/brk/: Cargo.toml
pkg/app/brk/src/: main.rs
pkg/app/fact/: Cargo.toml
pkg/app/fish/: Cargo.toml
pkg/app/fish/src/: main.rs
pkg/app/fork/: Cargo.toml
pkg/app/fork/src/: main.rs
pkg/app/hello/src/: main.rs
pkg/app/mq/: Cargo.toml
pkg/app/mq/src/: main.rs
pkg/app/mytest/: Cargo.toml
pkg/app/mytest/src/: main.rs
pkg/app/philo/: Cargo.toml
pkg/app/philo/src/: main.rs
pkg/app/sem/: Cargo.toml
pkg/app/sem/src/: main.rs
pkg/app/sh/: Cargo.toml
pkg/app/sh/src/: main.rs
pkg/app/spin/: Cargo.toml
pkg/app/test_fork/: Cargo.toml
pkg/app/test_sem/: Cargo.toml
pkg/app/test_sem/src/: main.rs
pkg/app/test_spin/: Cargo.toml
pkg/app/test_spin/src/: main.rs
pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
pkg/elf/src/: lib.rs
pkg/kernel/: Cargo.toml
pkg/kernel/config/: boot.conf
pkg/kernel/src/: lib.rs  main.rs
pkg/kernel/src/drivers/: filesystem.rs  input.rs  mod.rs  serial.rs  uart16550.rs
pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
pkg/kernel/src/memory/: frames.rs  gdt.rs  mod.rs  user.rs
pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  pid.rs  process.rs  sync.rs
pkg/lib/: Cargo.toml
pkg/lib/src/: lib.rs  macros.rs  sync.rs  syscall.rs
pkg/syscall/src/: lib.rs
(+23 files in other folders)
