[package]
name = "philo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path="../../lib", package="yslib"}
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }